--- a/src/scss/config.scss
+++ b/src/scss/config.scss
@@ -6,6 +6,7 @@ $color-black: #000000;
 $color-black-transparent: #00000080; 
 $color-gray: #666666;        
 $color-orange: #FB953E;  
+$color-text-main: #333333;
 $border-color-header: #C7C7C7;
 
 
@@ -14,6 +15,10 @@ $font-size-medium: 24px;
 $font-size-small-medium: 22px; 
 $font-size-base: 16px;    
 $font-size-small: 14px;  
+$font-size-small2: 12px; 
+
+
+$font-weigh-padrao: 400;
 
 
 $max-width-xl: 1550px; 
