--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -31,3 +31,186 @@ body {
     }
   }
 }
+.product-list {
+    &__container{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 40px 162px 0 ;
+    }
+    &__title {
+        p {
+            font-size: $font-size-large;
+            line-height: 43.58px;
+            font-weight: $font-weigh-padrao;
+        }
+    }
+    &__sort {
+        select{
+            width: 142px;
+            height: 42px;
+            font-size: $font-size-base;
+            line-height: 21.79px;
+            font-weight: $font-weigh-padrao;
+            font-family: $font-family;
+            border-radius: 0px;
+            border: 1px solid $color-black-transparent;
+            appearance: none; 
+            background: url('../img/icon-select.png') no-repeat right 10px center; 
+            background-size: 12px; 
+            padding: 8px;
+         
+        }  
+    }
+    &__filters{
+        padding: 65px 0 0 162px;
+        width: 157px;
+    }
+    &__filters-container.cores{
+        margin-bottom: 15px;
+        p {
+            font-size: $font-size-base;
+            line-height: 21.79px;
+            letter-spacing: 0.8px;
+            font-weight: $font-weigh-padrao;
+            text-transform: uppercase;
+            color: $color-text-main;
+        }
+    }
+
+    .hidden{
+        display: none;
+    }
+    &__color-checkbox {
+        
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+        gap: 10px;
+
+        .checkbox__input {
+            appearance: none;
+            background-color: #fff;
+            border: 1px solid $color-black-transparent;
+            padding: 6px;
+            font-size: $font-size-medium;
+            margin: 0;
+            cursor: pointer;
+
+            &:focus {
+                border-color: $color-orange;
+                background-color: $color-orange;
+                outline: none;
+            }
+
+            option::checked {
+                background-color: $color-orange;
+                color: #fff;
+            }
+           
+        }
+        .checkbox__label{
+            font-size: $font-size-small;
+            line-height: 14px;
+            font-weight: $font-weigh-padrao;
+        }
+        
+    }
+    .product-list__toggle-filters{
+        font-size: $font-size-small2;
+        line-height: 12px;
+        font-weight: $font-weigh-padrao;
+        color: $color-gray;
+        border-bottom: 1px solid $color-gray;
+        cursor: pointer;
+        .product-list__icon {
+            margin-left: 2px; 
+            width: 7px; 
+            height: 5px; 
+          }
+        
+    }
+    &__filters-container.tamanho{
+        margin: 24px 0;
+        p {
+            font-size: $font-size-base;
+            line-height: 21.79px;
+            letter-spacing: 0.8px;
+            font-weight: $font-weigh-padrao;
+            text-transform: uppercase;
+            color: $color-text-main;
+        }
+    }
+    .size-container {
+        text-align: center;
+      }
+      
+      .size-grid {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 8px;
+      }
+      
+      .size-item {
+        width: 32px;
+        height: 32px;
+        border: 1px solid $color-black-transparent;
+        text-align: center;
+        background-color: transparent;
+        font-size: $font-size-base;
+        font-weight: $font-weigh-padrao;
+        letter-spacing: 0.8px;
+        line-height: 12.79px;
+        padding: 0;
+        text-transform: uppercase;
+      }
+
+      &__filters-container.price{
+        margin: 24px 0 14px 0;
+        p {
+            font-size: $font-size-base;
+            line-height: 21.79px;
+            letter-spacing: 0.8px;
+            font-weight: $font-weigh-padrao;
+            text-transform: uppercase;
+            color: $color-text-main;
+        }
+    }
+      
+    &__price-checkbox {
+        
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+        gap: 10px;
+
+        .checkbox__input {
+            appearance: none;
+            background-color: #fff;
+            border: 1px solid $color-black-transparent;
+            padding: 6px;
+            font-size: $font-size-medium;
+            margin: 0;
+            cursor: pointer;
+
+            &:focus {
+                border-color: $color-orange;
+                background-color: $color-orange;
+                outline: none;
+            }
+
+            option::checked {
+                background-color: $color-orange;
+                color: #fff;
+            }
+           
+        }
+        .checkbox__label{
+            font-size: $font-size-small;
+            line-height: 14px;
+            font-weight: $font-weigh-padrao;
+        }
+        
+    }
+
+}
