--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -116,6 +116,7 @@ body {
             font-size: $font-size-small;
             line-height: 14px;
             font-weight: $font-weigh-padrao;
+            cursor: pointer;
         }
         
     }
@@ -207,8 +208,87 @@ body {
             font-size: $font-size-small;
             line-height: 14px;
             font-weight: $font-weigh-padrao;
+            cursor: pointer;
         }
         
     }
 
 }
+
+
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.5); // Fundo escuro semi-transparente
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+  
+    &.active {
+      opacity: 1;
+      visibility: visible;
+    }
+  
+    &__content {
+      background-color: white;
+      padding: 20px;
+      border-radius: 8px;
+      width: 90%; // Largura responsiva
+      max-width: 400px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+  
+    &__header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+  
+      h2 {
+        font-size: 1.5rem;
+        margin: 0;
+      }
+  
+      .close-button {
+        background: none;
+        border: none;
+        font-size: 1.5rem;
+        cursor: pointer;
+      }
+    }
+  
+    &__body {
+      p {
+        font-size: 1rem;
+        margin-bottom: 15px;
+      }
+  
+      button {
+        width: 100%;
+        padding: 10px;
+        font-size: 1rem;
+        background-color: #fb953e;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: background-color 0.3s;
+  
+        &:hover {
+          background-color: darken(#fb953e, 10%);
+        }
+      }
+    }
+  
+    // Esconde o modal por padrão em telas maiores
+    @media (min-width: 768px) {
+      display: none;
+    }
+  }
+  
