--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -48,7 +48,7 @@ body {
         p {
             font-size: $font-size-large;
             line-height: 43.58px;
-            font-weight: $font-weigh-padrao;
+            font-weight: $font-weight-padrao;
         }
     }
     &__sort {
@@ -57,7 +57,7 @@ body {
             height: 42px;
             font-size: $font-size-base;
             line-height: 21.79px;
-            font-weight: $font-weigh-padrao;
+            font-weight: $font-weight-padrao;
             font-family: $font-family;
             border-radius: 0px;
             border: 1px solid $color-black-transparent;
@@ -67,6 +67,9 @@ body {
             padding: 8px;
          
         }  
+    }
+    &__content{
+        display: flex;
     }
     &__filters{
         padding: 65px 0 0 162px;
@@ -81,8 +84,8 @@ body {
             font-size: $font-size-base;
             line-height: 21.79px;
             letter-spacing: 0.8px;
-            font-weight: $font-weigh-padrao;
-            text-transform: uppercase;
+            font-weight: $font-weight-padrao;
+            text-transform: $text-uppercase;
             color: $color-text-main;
         }
     }
@@ -115,7 +118,7 @@ body {
         .checkbox__label{
             font-size: $font-size-small;
             line-height: 14px;
-            font-weight: $font-weigh-padrao;
+            font-weight: $font-weight-padrao;
             cursor: pointer;
         }
         
@@ -123,7 +126,7 @@ body {
     .product-list__toggle-filters{
         font-size: $font-size-small2;
         line-height: 12px;
-        font-weight: $font-weigh-padrao;
+        font-weight: $font-weight-padrao;
         color: $color-gray;
         border-bottom: 1px solid $color-gray;
         cursor: pointer;
@@ -140,8 +143,8 @@ body {
             font-size: $font-size-base;
             line-height: 21.79px;
             letter-spacing: 0.8px;
-            font-weight: $font-weigh-padrao;
-            text-transform: uppercase;
+            font-weight: $font-weight-padrao;
+            text-transform: $text-uppercase;
             color: $color-text-main;
         }
     }
@@ -162,11 +165,11 @@ body {
         text-align: center;
         background-color: transparent;
         font-size: $font-size-base;
-        font-weight: $font-weigh-padrao;
+        font-weight: $font-weight-padrao;
         letter-spacing: 0.8px;
         line-height: 12.79px;
         padding: 0;
-        text-transform: uppercase;
+        text-transform: $text-uppercase;
         cursor: pointer;
       }
 
@@ -176,8 +179,8 @@ body {
             font-size: $font-size-base;
             line-height: 21.79px;
             letter-spacing: 0.8px;
-            font-weight: $font-weigh-padrao;
-            text-transform: uppercase;
+            font-weight: $font-weight-padrao;
+            text-transform: $text-uppercase;
             color: $color-text-main;
         }
     }
@@ -207,88 +210,76 @@ body {
         .checkbox__label{
             font-size: $font-size-small;
             line-height: 14px;
-            font-weight: $font-weigh-padrao;
+            font-weight: $font-weight-padrao;
             cursor: pointer;
         }
         
     }
 
-}
-
-
-.modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.5); // Fundo escuro semi-transparente
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease, visibility 0.3s ease;
-  
-    &.active {
-      opacity: 1;
-      visibility: visible;
-    }
-  
-    &__content {
-      background-color: white;
-      padding: 20px;
-      border-radius: 8px;
-      width: 90%; // Largura responsiva
-      max-width: 400px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    }
-  
-    &__header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 20px;
-  
-      h2 {
-        font-size: 1.5rem;
-        margin: 0;
-      }
-  
-      .close-button {
-        background: none;
-        border: none;
-        font-size: 1.5rem;
-        cursor: pointer;
-      }
-    }
-  
-    &__body {
-      p {
-        font-size: 1rem;
-        margin-bottom: 15px;
-      }
-  
-      button {
-        width: 100%;
-        padding: 10px;
-        font-size: 1rem;
-        background-color: #fb953e;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-  
-        &:hover {
-          background-color: darken(#fb953e, 10%);
+    .product-list__grid {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        padding-left: 150px;
+        padding-top: 65px;
+        gap: 50px;
+        
+        @media (max-width: 1024px) {
+          grid-template-columns: repeat(2, 1fr);
+          padding-left: 120px;
+        }
+      
+        @media (max-width: 768px) {
+          grid-template-columns: 1fr;
+          padding-left: 100px;
         }
       }
-    }
-  
-    // Esconde o modal por padrão em telas maiores
-    @media (min-width: 768px) {
-      display: none;
-    }
-  }
-  
+      
+      .product-card {
+        text-align: center;
+        
+        width: 195px;
+        height: 426px;
+      
+        &__image {
+          max-width: 100%;
+          height: auto;
+          margin-bottom: 10px;
+        }
+      
+        &__title {
+          font-size: $font-size-small;
+          font-weight: $font-weight-padrao;
+          line-height: 19.07px;
+          text-transform: $text-uppercase;
+          margin-bottom: 10px;
+        }
+      
+        &__price {
+          font-size: $font-size-base;
+          font-weight: $font-weight-bold;
+          line-height: 21.79px;
+        }
+
+        &__discount {
+            font-size: $font-size-base;
+            font-weight: $font-weight-padrao;
+            line-height: 21.79px;
+            margin-bottom: 14px;
+            color: $color-gray;
+        }   
+
+        &__button {
+            width: 100%;
+            padding: 7px 49px;
+            background-color: $color-black;
+            text-transform: $text-uppercase;
+            color: $color-white;
+            border: none;
+            cursor: pointer;
+
+            font-size: $font-size-small2;
+            font-weight: $font-weight-bold;
+            line-height: 19.07px;
+        }
+      }
+}
