--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -295,5 +295,25 @@ body {
           border: none;
           cursor: pointer;
         }
-      }
+      }     
+}
+.footer{
+  width: 100%;
+  height: 33px;
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    text-align: center;
+    background-color: #000000;
+    p {
+      font-size: $font-size-small2;
+      font-weight: $font-weight-padrao;
+      line-height: 19.07px;
+      color: $color-white;
+      text-transform: $text-uppercase;
+      letter-spacing: 0.8px;
+    }
+  }
 }
