--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,11 @@ body {
     width: 100%; 
     font-family: $font-family;
   }
+.wrapper{
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 .header {
     display: flex;
     justify-content: space-between;
@@ -35,6 +40,7 @@ body {
   }
 }
 .product-list {
+  flex: 1;
     &__container{
         display: flex;
         justify-content: space-between;
