--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -37,6 +37,23 @@ body {
       height: 20px; 
       cursor: pointer; 
     }
+    &-count{
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      top: 35px;
+      margin-left: 8px;
+      background-color: $color-orange;
+      border-radius: 50%;
+      width: 12px;
+      height: 12px;
+      span{
+        font-size: 10px;
+        font-weight: $font-weight-padrao;
+        line-height: 11.27px;
+        color: $color-white;
+      }
+    }
   }
 }
 .product-list {
